objects/SDR_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SDR Metrics</relationshipLabel>
        <relationshipName>SDR_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>MONTH( Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Country__c</fullName>
        <formula>Contact__r.MailingCountry  +  Lead_1__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date_Vault__c</fullName>
        <label>DC Completed Date Vault</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date__c</fullName>
        <label>DC Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Demo__c</fullName>
        <label>DC &amp; Demo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DC Completed</fullName>
                </value>
                <value>
                    <fullName>DC Completed Date (Vault)</fullName>
                </value>
                <value>
                    <fullName>DC Scheduled</fullName>
                </value>
                <value>
                    <fullName>DC Scheduled (Vault)</fullName>
                </value>
                <value>
                    <fullName>DC Scheduled For</fullName>
                </value>
                <value>
                    <fullName>DC Scheduled For (Vault)</fullName>
                </value>
                <value>
                    <fullName>Demo Performed</fullName>
                </value>
                <value>
                    <fullName>Demo_Performed(Vault)</fullName>
                    <label>Demo Performed(Vault)</label>
                </value>
                <value>
                    <fullName>Demo Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date_Vault__c</fullName>
        <label>DC Scheduled Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_Date__c</fullName>
        <label>DC Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date_Vault__c</fullName>
        <label>Demo Performed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date__c</fullName>
        <label>Demo Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date_Vault__c</fullName>
        <label>Demo Scheduled Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date__c</fullName>
        <label>Demo Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;, Lead_1__r.Email ), Contact__r.LastModifiedBy.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <formula>IF( Custom_Country__c  = &apos;United States&apos;, &apos;North America&apos;,IF(Custom_Country__c  = &apos;Canada&apos;, &apos;North America&apos;,IF(Custom_Country__c  = &apos;Australia&apos;, &apos;APAC&apos; ,&apos;EMEA&apos;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead 1</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SDR Metrics</relationshipLabel>
        <relationshipName>SDR_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <formula>IF( ISBLANK(Contact__c) ,IF( ISBLANK( Lead_1__c ),&apos;0&apos;, Lead_1__r.Full_Name__c ) , Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SDR Metrics (Lead)</relationshipLabel>
        <relationshipName>SDR_Metrics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <label>Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT( Lead_1__r.Status )</formula>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;, Lead_1__r.Phone ),Contact__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDR_Name__c</fullName>
        <label>SDR_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <formula>if(isBlank(Contact__c),if(isBlank(Lead_1__c),Null, Lead_1__r.SDR__c ),IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Arvind&quot; ), &quot;Arvind Tripathy&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Nick Garcia&quot; ), &quot;Nick Garcia&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Sherdah Moca&quot; ), &quot;Sherdah Moca&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Shiva Kumar Gatla&quot; ), &quot;Shiva Kumar Gatla&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Venkatesh T&quot; ), &quot;Venkatesh Thadanola&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Christina Blanco&quot; ), &quot;Christina Blanco&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Krishna Chaitanya&quot; ), &quot;Krishna Chaitanya&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;KC&quot; ),&quot;Krishna Chaitanya&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Belinda&quot; ),&quot;Belinda&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Kainaz&quot; ),&quot;Kainaz&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Amrit&quot; ),&quot;Amrita&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Matt&quot; ),&quot;Matt&quot;,IF ( INCLUDES ( Contact__r.SDR__c  , &quot;Mukesh&quot; ),&quot;Mukesh&quot;,NULL))))))))))))))</formula>
        <label>SDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( ISBLANK(Contact__c),IF( ISBLANK(Lead_1__c),&apos;0&apos;,&apos;Lead&apos;),&apos;Contact&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>SDR Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Contact__c</columns>
        <columns>Type__c</columns>
        <columns>DC_Demo__c</columns>
        <columns>Date__c</columns>
        <columns>Phone__c</columns>
        <columns>Geo__c</columns>
        <columns>Email__c</columns>
        <columns>SDR_Name__c</columns>
        <columns>Custom_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SDR Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDR Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>